--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">imdel</string>
     <string name="camera_button">&#xf030; Take Picture</string>
+    <string name="upload_button">&#xf1d8;</string>
+
+    <string name="upload_path">/upload_image</string>
+    <string name="uploaded">Successfully uploaded</string>
 </resources>
